Correction du contrast filter

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,7 +102,7 @@ body {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #5e5a30;
+	background-color: #5e5a31;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
